--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "sass": "^1.51.0"
+    "sass": "^1.51.0",
+    "sortablejs": "^1.15.0"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.5.0",
