--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "agnostic-draggable": "^1.4.5",
     "sass": "^1.51.0",
     "sortablejs": "^1.15.0"
   },
