--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "agnostic-draggable": "^1.4.5",
-    "sass": "^1.51.0",
+    "sass": "^1.54.0",
     "sortablejs": "^1.15.0"
   },
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.5.0",
-    "parcel-bundler": "^1.12.5",
-  "jsdom": ">=16.5.0"
+    "@parcel/transformer-sass": "^2.6.2",
+    "jsdom": ">=16.5.0",
+    "parcel-bundler": "^1.12.5"
   }
 }
